--- a/src/componenets/Contents/mobileOverlay.css
+++ b/src/componenets/Contents/mobileOverlay.css
@@ -451,8 +451,7 @@
     display: flex;
     align-items: center;
     justify-items: center;
-    margin-left: 40%;
-    width: 100%;
+    /* width: 100%; */
 }
 .chat-swipe-indicator p {
     color: white;
